setup/ansible/roles/kube-system/heapster/heapster-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: heapster
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        task: monitoring
        k8s-app: heapster
    spec:
      serviceAccountName: heapster
      nodeSelector:
        department: kube-system
      containers:
        - name: heapster
          image: hub.meiqia.com/google_gcr/google_heapster-amd64:v1.3.0-beta.1
          imagePullPolicy: IfNotPresent
          command:
            - /heapster
            - --source=kubernetes:https://kubernetes.default
            - --sink=influxdb:http://monitoring-influxdb:8086
