setup/ansible/roles/kube-system/heapster/influxdb-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: monitoring-influxdb
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: influxdb
        task: monitoring
    spec:
      nodeSelector:
        department: kube-system
      containers:
        - name: influxdb
          image: hub.meiqia.com/google_gcr/google_heapster-influxdb-amd64:v1.1.1
          ports:
            - containerPort: 8088
            - containerPort: 8086
          resources:
            limits:
              cpu: 100m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 500Mi
          volumeMounts:
            - mountPath: /data
              name: influxdb-storage
            - mountPath: /etc/
              name: influxdb-config
      volumes:
        - name: influxdb-storage
          emptyDir: {}
        - name: influxdb-config
          configMap:
            name: influxdb-config
