setup/ansible/roles/kube-system/heapster/influxdb-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    task: monitoring
    # For use as a Cluster add-on (https://github.com/kubernetes/kubernetes/tree/master/cluster/addons)
    # If you are NOT using this as an addon, you should comment out this line.
    kubernetes.io/cluster-service: 'true'
    kubernetes.io/name: monitoring-influxdb
  name: monitoring-influxdb
  namespace: kube-system
spec:
  ports:
    - name: http
      port: 8088
      targetPort: 8088
    - name: api
      port: 8086
      targetPort: 8086
  selector:
    k8s-app: influxdb
